Fixing some minor styling

--- a/content/articles/digi2019.md
+++ b/content/articles/digi2019.md
@@ -1,5 +1,5 @@
 ---
-title: "Digi.no article about what we do in Diwala"
+title: "Digi.no article"
 description: "An article focusing on what we introduced on our meetup"
 date: "2019-01-29"
 categories:
