Fix: Added newyearsletter page and minor tweaks

--- a/content/articles/digi2019.md
+++ b/content/articles/digi2019.md
@@ -15,4 +15,4 @@ https://www.digi.no/artikler/norske-selskaper-vil-lage-individuell-digital-ident
 
 ------------------------------------------------------------------
 
-![Digi artikle](/images/digiproof.png)
+![Digi artikkel](/images/digiproof.png)
